# Vervilure_Backend

./: .dockerignore  .env.ci  .env.docker  .env_default  .env_defaut  .gitignore  Docker  Dockerfile  Makefile  Procfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-compose_override.yml  entrypoint.sh  gunicorn_config.py  nginx.conf  pyproject.toml  pytest.ini  railway.json
  docs/: index.md
  docs/api/: authentication.md  overview.md  vervilure_openapi_v1.yaml
  docs/architecture/: Architecture.md  components.md  decisions.md  overview.md  patterns.md
  docs/diagrams/: data_flow.md  database.md  sequence_diagrams.md  system_overview.md
.github/workflows/: Vervelure_CI.yml  django.yml
Archiv/: django.yml
config/: celery.py  railway_settings.py  settings.py  test_urls.py  urls.py
src/: __init__.py
src/api/: __init__.py  urls.py
src/apps/accounts/: __init__.py  admin.py  auth_urls.py  jwt_views.py  middleware.py  models.py  permissions.py  serializers.py  tasks.py  throttles.py  user_urls.py  utils.py  views.py
src/apps/accounts/management/commands/: cleanup_accounts.py  cleanup_oauth_duplicates.py  setup_oauth.py  test_email.py  test_google_oauth.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/templates/accounts/emails/: base_email.html  password_reset_email.html  verification_email.html
src/apps/accounts/tests/: test_authentication.py
src/apps/accounts/utils/: __init__.py  email_testing.py  oauth_validators.py
src/apps/catalog/: apps.py  urls.py
src/apps/loyalty/: apps.py
src/apps/orders/: urls.py
src/apps/reviews/: apps.py
src/apps/wishlist/: apps.py
src/core/: views.py
src/core/backends/: __init__.py  sendgrid_api.py
src/core/testing/: __init__.py  email_testing.py  google_oauth_tester.py  jwt_auth_tester.py  test_jwt_auth_flow.py
src/core/utils/: url_helpers.py
src/templates/accounts/emails/: base_email.html  order_confirmation_email.html  password_reset_email.html  verification_email.html
src/templates/emails/: base_email.html  test_email.html
tests/: __init__.py  conftest.py  test_account_deletion.py  test_admin.py  test_email_verification.py  test_google_oauth.py  test_models.py  test_oauth_validators.py  test_serializers.py  test_settings.py  test_views.py
