[tool.poetry]
name = "vervilure-back"
version = "0.1.0"
description = ""
authors = ["plaha303 <111688671+plaha303@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
poetry-core = "^2.1.3"
celery = "^5.5.2"
django-redis = "^5.4.0"
stripe = "^12.1.0"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
dj-database-url = "^2.3.0"

[dev-packages]
django-types = "*"
ipdb = "*"
celery-types = "*"
fastapi = "*"
pydantic = "*"
uvicorn = "*"
requests = "*"
flake8 = "*"
black = "*"
isort = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
