[tool.poetry]
name = "vervilure-back"
version = "0.1.0"
description = ""
authors = ["plaha303 <111688671+plaha303@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
celery = "^5.5.2"
django-redis = "^5.4.0"
stripe = "^12.1.0"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
django-types = "*"
ipdb = "*"
celery-types = "*"
fastapi = "*"
pydantic = "*"
uvicorn = "*"
requests = "*"
safety = "^3.5.1"
coverage = "^7.8.0"
autoflake = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




# ************************************************
# ********** Code Quality Tools **********
# ************************************************

[tool.black]
target-version = ['py312']
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | .pytest_cache
    | seed
  )/
)
'''


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
src_paths = []


[tool.flake8]
max-line-length = 120
exclude = ".venv,__pycache__,migrations"


[tool.mypy]
#python_version = '3.12'
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
exclude = ["migrations"]

# Silence "type import errors" as our 3rd-party libs does not have types
# Check: https://mypy.readthedocs.io/en/latest/config_file.html#import-discovery
follow_imports = 'silent'

[[tool.mypy.overrides]]
ignore_missing_imports=true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "manage.py",
    "config/settings.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
