[tool.poetry]
name = "vervilure-back"
version = "0.1.0"
description = ""
authors = ["plaha303 <111688671+plaha303@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
pillow = "^10.0.0"
celery = "^5.5.2"
django-redis = "^5.4.0"
stripe = "^12.1.0"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
dj-database-url = "^3.0.0"
djangorestframework-simplejwt = "^5.5.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
django-allauth = "^65.0.0"
whitenoise = "^6.6.0"
django-perms = "^2.1.0"
google-auth = "^2.28.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
cryptography = "^42.0.0"
logger = "^1.4"
crefi = "^2.0.9"
django-timedeltafield = "^0.7.10"
gunicorn= "21.2.0"


[tool.poetry.group.dev.dependencies]
# Code quality and formatting tools
black = "^24.10"
isort = "^5.13"
flake8 = "^7.3"
mypy = "^1.16"

# Testing framework
pytest = "^8.3"
pytest-django = "^4.9"
pytest-cov = "^6.0"
coverage = "^7.6"
factory-boy = "^3.3"

# Development tools
django-types = "^0.19"
django-stubs = "^5.1"
celery-types = "^0.23"
ipdb = "^0.13"
requests = "^2.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ************************************************
# ********** Code Quality Tools **********
# ************************************************

[tool.black]
target-version = ['py312']
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | .pytest_cache
    | seed
    | migrations    # exclude Django migrations
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*.py"]
known_django = ["django"]
known_first_party = ["src", "config"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "migrations",
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    ".pytest_cache",
    ".mypy_cache",
    "seed",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "DJ01",  # avoid using null=True on string-based fields
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings.py" = ["F405", "F403"]
"*/migrations/*.py" = ["E501", "F401", "F841"]

[tool.flake8]
max-line-length = 120
exclude = ".venv,__pycache__,migrations,seed"
ignore = "E203,W503,E501"  # E203 conflicts with black, W503 is outdated, E501 handled by black

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["migrations", "seed"]

# Silence "type import errors" as our 3rd-party libs may not have types
follow_imports = "silent"
ignore_missing_imports = true

# Django-specific settings
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "manage",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "manage.py",
    "config/settings.py",
    "*/seed/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
testpaths = ["tests", "src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
